Refactored internal java constants to ObjectConstants