@@ -13,7 +13,6 @@
         <module>instrumenter</module>
     </modules>
     <packaging>pom</packaging>
-
     <name>Continuity</name>
 
     <properties>
@@ -187,6 +186,7 @@
                 <configuration>
                     <source>18</source>
                     <target>18</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
